welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:19: error: not found: value int
   if (int>=4){T(4)=3}
       ^golomb:20: error: not found: value int
   if (int>=6){T(6)=4}
       ^